Added styling to the about page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" href="/logo.svg" type="image/svg+xml" />
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mmathando - Health buddy in your pocket.</title>
+
+        <style>
+            body {
+              font-family: "Zain", sans-serif;
+              font-weight: 400;
+              font-style: normal;
+           
+            }
+        </style>
     </head>
     <body>
         <div id="root"></div>
